--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
 *Org2Blog publishes directly from Emacs's Org mode to WordPress blogs.*
 
-*Start [[https://github.com/org2blog/org2blog/wiki/Usage][here]] for Usage*
+*Start [[https://github.com/org2blog/org2blog/wiki/Usage][here]] for using it!*
 
 * Overview
 
