--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
 *Org2Blog publishes directly from Emacs's Org mode to WordPress blogs.*
 
-*Start [[https://github.com/org2blog/org2blog/wiki/Usage][here]] for using it!*
+*Start it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
 
 * Demo
 
@@ -34,6 +34,8 @@
 [[file:/images/07-Published-On-Blog.png]]
 
 [[https://www.wisdomandwonder.com/emacs/11659/blogging-with-emacs%25F0%259F%2590%2583-from-org2blog%25F0%259F%25A6%2584-to-wordpress][Here]] is the actual post 😄
+
+*Start it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
 
 * Overview
 
