--- a/README.org
+++ b/README.org
@@ -7,7 +7,7 @@
 
 *Org2Blog publishes directly from Emacs's Org mode to WordPress blogs.*
 
-*Start it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
+*Start using it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
 
 * Demo
 
@@ -33,9 +33,9 @@
 
 [[file:/images/07-Published-On-Blog.png]]
 
-[[https://www.wisdomandwonder.com/emacs/11659/blogging-with-emacs%25F0%259F%2590%2583-from-org2blog%25F0%259F%25A6%2584-to-wordpress][Here]] is the actual post 😄
+[[https://www.wisdomandwonder.com/emacs/11659/blogging-with-emacs%25F0%259F%2590%2583-from-org2blog%25F0%259F%25A6%2584-to-wordpress][Here]] is the actual post and it's [[https://raw.githubusercontent.com/grettke/wisdomandwonder/master/post/2019-02-01-01.org][Org mode document]] 😄!
 
-*Start it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
+*Start using it [[https://github.com/org2blog/org2blog/wiki/Usage][here]]!*
 
 * Overview
 
