--- a/docs/CONTRIBUTING.org
+++ b/docs/CONTRIBUTING.org
@@ -35,7 +35,7 @@ are expected of you when you do decide to make a contribution:
   terms.
 
 That is it. That is everything. If you made it this far then kudos for you to
-sticking around. Looking forward to all of your contributions in what shape or
-form.
+sticking around. Thank you for spending your time here. Hope you keep blogging
+and having fun with Org2Blog. 
 
 Thanks and have a great day.
