--- a/README.org
+++ b/README.org
@@ -173,7 +173,7 @@ Here is a simple way to do it:
 For example you can copy and paste the Git clone commands intto a terminal, 
 
 #+name: clones
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :exports both
 ((lambda (install-dir)
    (print
     (apply 's-concat
@@ -204,7 +204,7 @@ git clone https://github.com/hexmode/xml-rpc-el.git ~/src/xml-rpc"
 Add them to your load path,
 
 #+name: org_gcr_2019-03-09T22-18-17-06-00_cosmicality_A4D95252-60ED-4DE0-BB7D-E828E64652B7
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :exports both
 ((lambda (install-dir)
    (mapcar
     (lambda (req)
